Fix fulllogo overflow

--- a/style/home.css
+++ b/style/home.css
@@ -1,5 +1,6 @@
 /*body { width: auto; overflow: visible;}*/
 #fulllogo-container {
+	max-width: 100vw;
 	height: 10vh;
 	min-height: 50px;
 	width: auto;
@@ -9,8 +10,9 @@
 	padding-bottom: 1vh;
 }
 #fulllogo {
+	object-fit: contain;
 	height: 100%;
-	width: auto;
+	width: 100%;
 }
 .stat {
 	width: auto !important;
